Ensure background color extends to safe areas on iOS

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -5,6 +5,10 @@
   color: $text-color;
 }
 
+html {
+  background-color: $bg-color;
+}
+
 // Base styles
 html,
 body {
